# IdrisExtSTGCodegen

./: .gitignore  LICENSE  Makefile  README.md  VERSIONS  docs  index.html  stg-idris2.ipkg
.foreign/: System.stgffi
.foreign/Data/: Strings.stgffi
.foreign/Prelude/: Basics.adt  IO.stgffi  Types.stgffi  Uninhabited.stgffi
.foreign/System/File/: Process.stgffi  ReadWrite.stgffi  Virtual.stgffi
haskell/: README.md  create-fullpack.sh  idris-extstg-string.cabal  idris-haskell-interface.cabal  stack.yaml
haskell/lib/: IdrisString.hs  Main.hs  TestMain.hs
haskell/lib/Idris/: String.hs
haskell/lib/Idris/FFI/: System.hs
haskell/lib/Idris/FFI/Prelude/: IO.hs
haskell/lib/Idris/FFI/System/File/: Process.hs  ReadWrite.hs  Virtual.hs
haskell/lib/Idris/Runtime/: BelieveMe.hs  Bits.hs  Cast.hs  Crash.hs  Erased.hs  Integer.hs  PrimType.hs  STM.hs  String.hs  World.hs
haskell/lib/Idris/Runtime/Cast/: Bits16.hs  Bits32.hs  Bits64.hs  Bits8.hs  Char.hs  Double.hs  Int.hs  Int16.hs  Int32.hs  Int64.hs  Int8.hs  Integer.hs  String.hs
haskell/lib/Idris/Runtime/PrimOp/: Add.hs  BAnd.hs  BOr.hs  BXOr.hs  Cast.hs  Div.hs  Double.hs  EQ.hs  GT.hs  GTE.hs  LT.hs  LTE.hs  Mod.hs  Mul.hs  Neg.hs  ShiftL.hs  ShiftR.hs  Str.hs  Sub.hs
haskell/lib/Idris/Test/: FFITypes.hs
haskell/main/: Main.hs
haskell/test/: TestMain.hs
src/: CPSLifted.idr  FibTest.idr  HW.idr  Hello.idr  Main.idr
src/Idris/Codegen/ExtSTG/: ADTAlias.idr  ADTMap.idr  ADTs.idr  ANFToSTG.idr  Binders.idr  Configuration.idr  ConstantRep.idr  Context.idr  Core.idr  DiscoverADTs.idr  Erased.idr  ExtName.idr  ExternalTopIds.idr  Foreign.idr  ForeignFile.idr  GHCPrimOp.idr  JSON.idr  JSONData.idr  Prelude.idr  Pretty.idr  PrimOp.idr  RepType.idr  Representation.idr  STG.idr  SemiDecEq.idr  String.idr  StringTable.idr  TTtoSTG.idr
src/pearls/: InitialAlgebra.hs  PrimitiveType.idr  RecursiveLet.idr  SC.idr  Store.idr
talks/bob2021/: Bob2021.md  custom-backend.rst
talks/bob2021/reveal/: index.html
talks/bob2021/reveal.js-master/: index.html
test/: FibTest.idr  Hello.idr  Main.idr  Makefile  TPat.idr  Test0.idr  Test1.idr  Test3.idr  failures  run.sh
test/PrimOps/: HW.idr  Test1.idr  Test2.idr
test/chez/chez009/: output  run
test/ffi/: Test0.idr  Test2.idr  Test3.idr
test/ffi/test0/: Test0.idr  expected  output  run
test/ffi/test1/: Test1.idr  expected  run
test/ffi/test2/: Test2.idr  expected  output  run
test/ffi/test3/: Test3.idr  expected  run
test/ffi/test4/: Test4.idr  expected  run
test/ffi/test5/: Test5.idr  expected  run
test/ffi/test6/: Test.idr  expected  run
test/idris2/basic045/: expected  output
test/idris2/basic054/: expected  output
test/idris2/basic055/: Test.idr  expected  output  run
test/idris2/basic056/: expected  output
test/idris2/basic068/: expected  output
test/idris2/builtin009/: expected  output
test/idris2/builtin011/: expected  output
test/idris2/builtin012/: expected  output
test/idris2/idiom001/: expected  output  run
test/idris2/perf002/: expected  output
test/idris2/perf008/: expected  output
test/idris2/record015/: expected  output
test/idris2/reflection014/: expected  output
test/idris2/total006/: expected  output
test/prim-ops/test0/: Test0.idr  expected  output  run
test/prim-ops/test1/: expected  output  run
test/prim-ops/test2/: .foreign  expected  output  run
test/prim-ops/test3/: expected  output
test/prim-ops/test4/: Test4.idr  expected  output  run
test/prim-ops/test5/: Test5.idr  expected  output  run
test/prim-ops/test6/: Test.idr  expected  run
test/prim-ops/test7/: Test.idr  expected
test/prim-ops/test8/: Test.idr  expected
test/typedd-book/chapter01/: expected
test/typedd-book/chapter02-average/: expected  input
test/typedd-book/chapter02-reverse/: expected
test/typedd-book/chapter04-data-store/: input  output  run
test/typedd-book/chapter04-sum-inputs/: input  output
test/typedd-book/chapter05-dep-pairs/: Test.idr  expected  input  latest.anf  run
test/typedd-book/chapter05-hello/: expected
test/typedd-book/chapter05-loops/: Test.idr  input  latest.anf  output
test/typedd-book/chapter06/: expected  input  latest.anf
test/typedd-book/chapter09/: expected  input  latest.anf  output
test/typedd-book/chapter11-arith/: Test.idr  expected  latest.anf  output  run
test/typedd-book/chapter11-arith-cmd/: Test.idr  expected  input  latest.anf
test/typedd-book/chapter11-arith-cmd-do/: Test.idr  input  latest.anf  output  run
test/typedd-book/chapter11-arith-total/: Test.idr  expected  latest.anf
test/typedd-book/chapter11-infio/: expected  latest.anf  output  run
test/typedd-book/chapter11-runio/: expected  input  latest.anf
test/typedd-book/chapter12-arithstate/: Test.idr  expected  input  latest.anf  output
test/typedd-book/chapter12-traverse/: expected  latest.anf  output
test/typedd-book/chapter13-stackio/: Test.idr  expected  input  latest.anf  output
test/typedd-book/chapter13-vending/: Test.idr  expected  input  latest.anf  output
test/typedd-book/chapter14/: expected  input  latest.anf  output
