name:                idris-extstg-string
version:             0.0.0.0
synopsis:            Idris ExtSTG String implementation

license:             BSD3
license-file:        LICENSE
author:              Andor Penzes
maintainer:          andor.penzes@gmail.com
copyright:           (c) 2020 Andor Penzes
category:            Development
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
    IdrisString

  hs-source-dirs:      lib
  ghc-options:         -Wall -fobject-code
  build-depends:       base,
                       ghc-prim,
                       primitive
  default-language:    Haskell2010
