name:                idris-haskell-interface
version:             0.0.0.0
synopsis:            Idris ExtSTG Haskell interface

license:             BSD3
author:              Andor Penzes
maintainer:          andor.penzes@gmail.com
copyright:           (c) 2020 Andor Penzes
category:            Development
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
    Idris.String

  hs-source-dirs:      lib
  ghc-options:         -Wall -fobject-code
  build-depends:       base,
                       ghc-prim,
                       primitive
  default-language:    Haskell2010

executable idris-haskell-interface
  default-language:    Haskell2010
  hs-source-dirs:      lib
  main-is:             Main.hs
  other-modules:       Idris.String
  build-depends:       base,
                       ghc-prim,
                       primitive

executable idrisStringTest
  default-language:    Haskell2010
  hs-source-dirs:      lib
  main-is:             TestMain.hs
  build-depends:       base,
                       ghc-prim,
                       primitive,
                       idris-haskell-interface,
                       QuickCheck