name:                idris-haskell-interface
version:             0.0.0.0
synopsis:            Idris ExtSTG Haskell interface

license:             BSD3
author:              Andor Penzes
maintainer:          andor.penzes@gmail.com
copyright:           (c) 2020 Andor Penzes
category:            Development
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
    Idris.Runtime.Cast,
    Idris.Runtime.PrimType,
    Idris.Runtime.String,
    Idris.Runtime.World,
    Idris.FFI.System.File.Process,
    Idris.FFI.System.File.ReadWrite,
    Idris.FFI.System.File.Virtual,
    Idris.Test.FFITypes

  hs-source-dirs:      lib
  ghc-options:         -Wall -fobject-code
  build-depends:       base,
                       ghc-prim,
                       primitive
  default-language:    Haskell2010

executable idris-haskell-interface
  default-language:    Haskell2010
  hs-source-dirs:      main, lib
  main-is:             Main.hs
  -- This guarantees that all the modules in the lib will be present in
  -- the main compilation unit, which is needed by the Idris generated
  -- STG module. The main reason for this solution as we still need to
  -- solve the name-mangling problem.
  other-modules:
    Idris.Runtime.Cast,
    Idris.Runtime.PrimType,
    Idris.Runtime.String,
    Idris.Runtime.World,
    Idris.FFI.System.File.Process,
    Idris.FFI.System.File.ReadWrite,
    Idris.FFI.System.File.Virtual,
    Idris.Test.FFITypes
  build-depends:       base,
                       ghc-prim,
                       primitive

executable idrisStringTest
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             TestMain.hs
  build-depends:       base,
                       ghc-prim,
                       primitive,
                       idris-haskell-interface,
                       QuickCheck